fixed video not scaling on mobile device

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -654,3 +654,18 @@ html.transition *:after {
     }
   }
 }
+
+.youtube-wrapper {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+.youtube-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
